css/weather.css
html {
  background: none;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

body {
  background-color: transparent;
  font-family: 'Baloo', cursive;
  color: white;
}

h1 {
  font-size: 2.5em;
}

h2 {
  font-size: 1.5em;
}

button {
  margin: 0 1em;
}

button:focus, button:active {
  box-shadow: none !important;
  outline: 0 !important;
}

.horizontal-flex {
  display: flex;
  flex-flow: row wrap;
  align-items: center;
}

.vertical-flex {
  display: flex;
  flex-flow: column wrap;
  align-items: center;
  justify-content: center;
}

.loading {
  width: 100%;
  height: 100vh;
  z-index: 10;
  background-color: white;
}

.right-padded {
  padding-right: 0.5%;
  text-align: right;
}

.low-opac {
  background: rgba(51, 51, 51, 0.05);
  padding: 0 1%;
  border-radius: 5px;
}

.weather-box {
  width: 30%;
  min-height: 10em;
  position: fixed;
  top: 50%;
  left: 35%;
}

#header {
  justify-content: flex-end;
}

#loading-img {
  margin: auto;
  width: 30%;
}

@media all and (min-width: 50em) {
  h1 {
    font-size: 5em;
  }

  h2 {
    font-size: 3em;
  }
}

